--- a/index.html
+++ b/index.html
@@ -1,45 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>calculator</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-    <div class="screen">
-        <div class="panel">
-
-        </div>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <title>JS Calculator</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="calculator">
+      <div class="display">
+        <div class="previous-display"></div>
+        <div class="current-display"></div>
+      </div>
+      <div class="buttons-container">
+        <div class="button function ac">AC</div>
+        <div class="button function pm">±</div>
+        <div class="button function percent">%</div>
+        <div class="button operator division">÷</div>
+        <div class="button num number-7">7</div>
+        <div class="button num number-8">8</div>
+        <div class="button num number-9">9</div>
+        <div class="button operator multiplication">x</div>
+        <div class="button num number-4">4</div>
+        <div class="button num number-5">5</div>
+        <div class="button num number-6">6</div>
+        <div class="button operator subtraction">-</div>
+        <div class="button num number-1">1</div>
+        <div class="button num number-2">2</div>
+        <div class="button num number-3">3</div>
+        <div class="button operator addition">+</div>
+        <div class="button num number-0">0</div>
+        <div class="button num decimal">.</div>
+        <div class="button equal">=</div>
+      </div>
     </div>
 
-    <div class="buttons">
-     <div class="button1">
-         <div class="but">AC</div>
-         <div class="but">C</div>
-         <div class="but">/</div>
-         <div class="but">*</div>
-         <div class="but">7</div>
-         <div class="but">8</div>
-         <div class="but">9</div>
-         <div class="but"></div>
-         <div class="but">-</div>
-         <div class="but">4</div>
-         <div class="but">5</div>
-         <div class="but">6</div>
-         <div class="but">+</div>
-         <div class="but">1</div>
-         <div class="but">2</div>
-         <div class="but">3</div>
-         <div class="but">=</div>
-         <div class="but">0</div>
-         <div class="but">.</div>
-         <div class="but"></div>
-     </div>
-    </div>
-</div>
-</body>
+    <script src="app.js"></script>
+  </body>
 </html>
